# real-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  \  a.out  console.c  console.h  console_test.c  controller.c  controller.h  engine.c  engine.h  engine_internal.h  entity_components.c  entity_components.h  error.c  error.h  examples.c  examples.h  flake.nix  game.c  graphics.c  graphics.h  grid.c  grid.h  install.sh  level_editor.c  level_editor.h  math2d.c  math2d.h  memory.c  memory.h  notes.md  physics.c  physics.h  systems.c  systems.h  tools.c  tools.h
docs/: Doxyfile  README.md  architecture.md  errors.md  public_api.md
docs/pages/: entity_ids.md
examples/flies-around-ball/: flies_around_ball.c
examples/flies-in-pit/: flies_in_pit.c
examples/flies_around_ball/: flies_around_ball.c
examples/flies_in_pit/: flies_in_pit.c
examples/fly-to-finish/: fly_to_finish.c
examples/test-assets/elder-fly/: elderfly_descriptors.c  elderfly_descriptors.h
examples/test-assets/orm/: orm_descriptors.c  orm_descriptors.h
examples/view-port/: view_port.c
include/: console.h  controller.h  engine.h  entity_components.h  error.h  graphics.h  grid.h  level_editor.h  math2d.h  memory.h  physics.h  rohr.h  systems.h  tools.h
rendering/: clear.c  myprog
scripts/: generate_public_api_markdown.pl
src/: console.c  controller.c  engine.c  engine_internal.h  entity_components.c  error.c  graphics.c  grid.c  level_editor.c  memory.c  physics.c  platform_process.c  platform_process.h  rohr.c  systems.c  tools.c
test-assets/elder-fly/: elderfly_descriptors.c  elderfly_descriptors.h
